# Krake

./: .bandit  .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  .renovate.json  CHANGELOG  CONTRIBUTING.md  LICENSE  README.md  code-of-conduct.md  constraints.txt  go.mod  go.sum  krake.yaml  krake.yaml.template  pyproject.toml  rak.yaml  renovate.json  requirements.txt  requirements_dev.txt  rok.yaml.template  towncrier.toml  tox.ini
krake/: README.md  config.yaml  pyproject.toml  pytest.ini  requirements.in  requirements.txt  requirements_ansible.in  requirements_api_generator.in  requirements_dev.in  requirements_dev.txt  setup.py
krake/krake/: __about__.py  __init__.py  client.py  error.py  test_utils.py  utils.py  validation.py
krake/krake/api/: __init__.py  __main__.py  app.py  auth.py  base.py  core.py  crud_api.py  database.py  garbage_collection.py  generator.py  helpers.py  infrastructure.py  krake-openapi.yaml  kubernetes.py  manager.py  middlewares.py  openstack.py  tosca.py
krake/krake/api/resources/: __init__.py  kubernetes.py  roles.py
krake/krake/api/websocket/: __init__.py  __main__.py
krake/krake/api_generator/: __main__.py  api_client.py  api_definition.py  api_or_test_generator.py  api_server.py  apidef.py  parser.py  test_client.py  test_server.py  utils.py
krake/krake/api_generator/templates/: api_definition.jinja  macros.jinja
krake/krake/apidefs/: __init__.py  core.py  definitions.py  kubernetes.py  openstack.py
krake/krake/client/: __init__.py  core.py  generator.py  infrastructure.py  kubernetes.py  openstack.py  resource.py
krake/krake/controller/: __init__.py  exceptions.py  garbage_collector.py  gc.py  hooks.py  kubernetes.py  kubernetes_application.py  magnum.py  scheduler.py  workqueue.py
krake/krake/controller/infrastructure/: __init__.py  __main__.py  hooks.py  infrastructure.py  providers.py
krake/krake/controller/kubernetes/: __init__.py  __main__.py  application.py  client.py  cluster.py  hooks.py  kubernetes.py  tosca.py
krake/krake/controller/kubernetes_application/: __init__.py  __main__.py  events.py  hooks.py  kubernetes_application.py
krake/krake/controller/scheduler/: __init__.py  __main__.py  constraints.py  metrics.py  metrics_provider.py  scheduler.py
krake/krake/data/: __init__.py  config.py  constraints.py  core.py  infrastructure.py  kubernetes.py  metadata.py  openstack.py  serializable.py  system.py
krake/krake/data/hooks/: enums.py
krake/krake/tools/: bootstrap_db.py
krake/requirements/: main.in
krake/scripts/: krake_bootstrap_db  krake_generate_config
krake/tests/: conftest.py
krake/tests/api/: test_app.py  test_auth.py  test_config.py  test_core.py  test_database.py  test_etcd.py  test_garbage_collection.py  test_helpers.py  test_infrastructure.py  test_kubernetes.py  test_openstack.py  test_tosca.py
krake/tests/api/kubernetes/: test_application_read.py  test_application_update.py  test_applications_create.py  test_applications_delete.py  test_clusters.py
krake/tests/api/openstack/: test_magnum_clusters.py  test_projects.py
krake/tests/api/resources/: test_kubernetes.py  test_roles.py
krake/tests/client/: test_core.py  test_infrastructure.py  test_kubernetes.py  test_openstack.py
krake/tests/controller/: __init__.py  test_controller.py  test_garbage_collection.py  test_gc.py  test_infrastructure.py  test_kubernetes.py  test_kubernetes_application.py  test_magnum_cluster.py  test_scheduler.py  test_workqueue.py
krake/tests/controller/infrastructure/: test_infrastructure_controller.py  test_observer.py  test_providers.py
krake/tests/controller/kubernetes/: __init__.py  test_application.py  test_cluster.py  test_custom_resource.py  (+6 more)
krake/tests/data/: test_constraints.py  test_core.py  test_data.py  test_infrastructure.py  test_kubernetes.py  test_serializable.py
krake/tests/factories/: __init__.py  common.py  core.py  fake.py  infrastructure.py  kubernetes.py  openstack.py  system.py
krakectl/: pyproject.toml
krakectl/krakectl/: __init__.py  __main__.py  core.py  fixtures.py  formatters.py  infrastructure.py  kubernetes.py  openstack.py  parser.py
krakectl/tests/: conftest.py
rak/: pyproject.toml  setup.py
rak/functionals/: conftest.py  echo-demo-cascade_policy-observer-schema.yaml  echo-demo-cascade_policy-observer-schema.yml  echo-demo-cascade_policy.yaml  echo-demo-cascade_policy.yml  echo-demo-namespaced.yaml  echo-demo-observer-schema-custom-1.yaml  echo-demo-observer-schema-standard.yaml  echo-demo-tosca.yaml  echo-demo-update-tosca.yaml  echo-demo-update.yaml  echo-demo.yaml  environment.py  hook-complete-script.py  hook-deploy.yaml  hook-script-shutdown-rq.py  hook-script-shutdown-service.py  hook-script.py  hook-shutdown-observer.yaml  hook-shutdown-script.py  hook-shutdown-service.yaml  hook-shutdown.yaml  im-cluster-scale-down.yaml  im-cluster-scale-up.yaml  im-cluster.yaml  minio-script.py  mnist-cmpl.yaml  resource_definitions.py  resource_provider.py  test_integration.py  test_integration_scripts.py  test_krake_cli.py  test_kubectl_cli.py  test_kubernetes.py  test_minikube_cli.py  utils.py
rak/functionals/integration/: test_core.py  test_example_applications.py  test_garbage_collecting.py  test_hooks.py  test_infrastructure.py  test_infrastructure_resources.py  test_kubernetes_cluster.py  test_kubernetes_migration.py  test_kubernetes_observer.py  test_openstack.py  test_scheduling.py  test_scripts.py  test_update.py
rak/rak/: __init__.py  __main__.py  deploy.py  inventory.py  profiles.py  provision.py  stacks.py  test.py  test_2.py  test_multiproc.py  test_utils.py
rak/rak/stacks/: environment.yml  gateway.yml  virtualmachine.yml
rak/smoke/: test_krake.py  test_minikube.py
rak/tests/: conftest.py  template_test.yml  test_blocking.py  test_inventory.py  test_profiles.py  test_stack.py  test_stack.py.save
rok/: pyproject.toml  setup.py
rok/rok/: __init__.py  __main__.py  core.py  fixtures.py  formatters.py  helpers.py  infrastructure.py  kubernetes.py  openstack.py  parser.py
rok/tests/: conftest.py
(+525 files in other folders)
