[build-system]
requires = ["setuptools>=69.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "krake"
authors = [
    {name = "Krake Development Team", email = "krake@cloudandheat.com"},
]
description = ""
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
dynamic = ["version"]
# Only add direct dependencies here and use the most abstract version
# restriction possible (e.g., a lower bound).
# The exact versions including versions of transitive dependencies are
# compiled with pip-compile and recorded in the requirements*.txt files.
# Version constraints on transitive dependencies can be placed in
# constraints.txt.
dependencies = [
    "aiohttp==3.*",
    "aiohttp-cors==0.7.*",
    "deepdiff==6.2.*",
    "etcd3-py==0.1.*",
    "influxdb_client",
    "keystoneauth1==4.*",
    "kubernetes",
    "kubernetes-asyncio==22.*",
    "lark-parser==0.11.*",
    "marshmallow==3.*",
    "marshmallow-enum",
    "marshmallow-union",
    "pyOpenSSL",
    "python-magnumclient==3.*",
    "PyYAML==6.*",
    "requests<=2.31.0",
    "semantic-version>=2.10",
    "tosca-parser==2.6.*",
    "webargs==8.*",
    "yarl==1.8.*",
]

[tool.setuptools.packages.find]
exclude = ["cluster_certs", "logs"]

[tool.setuptools.dynamic]
version = {attr = "krake.__about__.__version__"}

[project.urls]
Homepage = "https://krake.cloud"
Documentation = "https://rak-n-rok.readthedocs.io/projects/krake/en/latest/"
Repository = "https://gitlab.com/rak-n-rok/krake"

[project.scripts]
krake_bootstrap_db = "krake.tools.bootstrap_db:cli"

[project.optional-dependencies]
test = [
    "factory-boy==2.*",
    "keystone==20.*",
    "mock==4.*",
    "prometheus-async==19.*",
    "prometheus-client==0.7.*",
    "pytest==6.*",
    "pytest-aiohttp==0.3.*",
    "pytest-cov==3.*",
    "pytest-httpserver==1.*",
    "pytz",
]
dev = [
    "pre-commit==2.*",
    "tox>=4.12",
]
ansible = [
    "ansible>=2.9",
    "openstacksdk",
    "python-openstackclient",
]
api_generator = [
    "black==24.2.0",
    "jinja2==3.*",
]

[tool.black]
line-length = 88