[build-system]
requires = ["setuptools>=69.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "krakectl"
version = "0.0.1"
authors = [
    {name = "Krake Development Team", email = "krake@cloudandheat.com"},
]
description = "Command line interface for Krake"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
dependencies = [
    "python-dateutil==2.*",
    "PyYAML==6.*",
    "requests==2.*",
    "texttable==1.*",
    "shtab==1.*",
]

[project.urls]
Homepage = "https://krake.cloud"
Documentation = "https://rak-n-rok.readthedocs.io/projects/krake/en/latest/"
Repository = "https://gitlab.com/rak-n-rok/krake"

[project.scripts]
krakectl = "krakectl.__main__:main"

[tool.setuptools]
packages = ["krakectl"]
